missing files added

--- a/templates/web/callback.html
+++ b/templates/web/callback.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.bootstrapdash.com/demo/purple-admin-free/{% url 'web:index' %} by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Sep 2022 11:18:01 GMT -->
+<!-- {% url 'web:index' %}  11:18:01 GMT -->
 
 <head>
   <!-- Required meta tags -->
