--- a/templates/web/register.html
+++ b/templates/web/register.html
@@ -1,12 +1,9 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.bootstrapdash.com/demo/purple-admin-free/{% url 'web:index' %} by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Sep 2022 11:18:01 GMT -->
-
 <head>
+    {% load static %}
     <!-- Required meta tags -->
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>USKLOGIN.COM</title>
     <!-- plugins:css -->
@@ -18,15 +15,12 @@
     <!-- inject:css -->
     <!-- endinject -->
     <!-- Layout styles -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
 
     <!-- End layout styles -->
     <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
     <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
@@ -34,7 +28,7 @@
     <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
 </head>
 
-<body style="background-color:#f2edf3 ;">
+<body style="background-color:#f2edf3;">
 
     <div class="container">
         <div class="row">
@@ -44,7 +38,7 @@
 
             <div class="wrapper">
 
-                <form class="form-right" method="POST" action="{% url 'web:payment' %}" >
+                <form class="form-right" method="POST" action="{% url 'web:payment' %}">
                     <h2 class="text-uppercase text-center">USK Agent Registration</h2>
                     <div class="row">
                         {% csrf_token %}
@@ -82,14 +76,14 @@
                             <label>District</label>
                             <!-- <input type="text" name="district" id="district" class="input-field" value="{{phone}}"> -->
                             {{user_form.district}}
-                        
+
 
                         </div>
                         <div class="col-sm-6 mb-3">
                             <label>Pincode</label>
                             <!-- <input type="text" name="pincode" id="pincode" class="input-field" value="{{phone}}"> -->
                             {{user_form.pincode}}
-                        
+
 
                         </div>
                         <div class="col-sm-12 col-12 mb-3">
@@ -108,10 +102,10 @@
                     <!-- <button type="submit" class="btn btn-primary">CONTINUE </button> -->
 
                     <div class="form-field text-center">
-                      
-                            <input type="submit" value="Submit" id="submit_prog" class="register" name="register">
-                           
-                      
+
+                        <input type="submit" value="Submit" id="submit_prog" class="register" name="register">
+
+
                     </div>
                 </form>
             </div>
