--- a/templates/web/terms&conditions.html
+++ b/templates/web/terms&conditions.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.bootstrapdash.com/demo/purple-admin-free/{% url 'web:index' %} by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Sep 2022 11:18:01 GMT -->
+<!-- {% url 'web:index' %}  11:18:01 GMT -->
 
 <head>
     <!-- Required meta tags -->
@@ -25,7 +25,8 @@
     <!-- End layout styles -->
     <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
     <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
@@ -35,14 +36,14 @@
 
 <body style="background-color:#f2edf3 ;">
 
-<div class="container">
-    <div class="row">
-         
-    </div>
-</div>
-           
+    <div class="container">
+        <div class="row">
 
-        
+        </div>
+    </div>
+
+
+
     <!-- container-scroller -->
     <!-- plugins:js -->
     <script src="{% static 'web/vendors/js/vendor.bundle.base.js' %}"></script>
@@ -58,8 +59,10 @@
     <!-- endinject -->
     <script src="{% static 'web/js/owl.carousel.min.js' %}"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
     <!-- Custom js for this page -->
     <script src="{% static 'web/js/dashboard.js' %}"></script>
     <script src="{% static 'web/js/todolist.js' %}"></script>
