--- a/templates/web/register.html
+++ b/templates/web/register.html
@@ -21,7 +21,6 @@
     <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
     <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
 
@@ -36,135 +35,60 @@
                 <img src="{% static 'web/images/USKLKOG.png' %}" style="width:24%;" class="usk-login-register" alt="">
             </div>
 
-            <div class="wrapper">
+            <div class="wrapper py-5">
 
                 <form class="form-right" method="POST" action="{% url 'web:payment' %}">
-                    <h2 class="text-uppercase text-center">USK Agent Registration</h2>
+                    <h2 class="text-uppercase">USK Agent Registration</h2>
                     <div class="row">
                         {% csrf_token %}
-                        <div class="col-sm-6 mb-3">
-                            <label>Name</label>
-                            <!-- <input type="text" name="name" id="name" class="input-field"> -->
-                            {{user_form.name}}
+                        <div class="col-sm-12 mb-3"><label class="text-left">Name</label>{{user_form.name}}</div>
+                        <div class="col-sm-6 mb-3"><label class="text-left">Shop Name</label>{{user_form.shop_name}}
                         </div>
-                        <div class="col-sm-6 mb-3">
-                            <label>Shop Name</label>
-                            <!-- <input type="text" name="shop_name" id="shop_name" class="input-field"> -->
-                            {{user_form.shop_name}}
+                        <div class="col-sm-6 mb-3"><label class="text-left">Category</label>{{user_form.category}}</div>
+                        <div class="col-sm-12 mb-3"><label class="text-left">Shop
+                                Address</label>{{user_form.shop_address}}</div>
+                        <div class="col-sm-6 mb-3"><label class="text-left">Email</label>{{user_form.email}}</div>
+                        <div class="col-sm-6 mb-3"><label class="text-left">Mobile Number</label>{{user_form.phone}}
                         </div>
+                        <div class="col-sm-6 mb-3"><label class="text-left">District</label>{{user_form.district}}</div>
+                        <div class="col-sm-6 mb-3"><label class="text-left">Pincode</label>{{user_form.pincode}}</div>
                     </div>
-                    <div class="mb-3">
-                        <label>Shop Address</label>
-                        <!-- <textarea name="shop_address" id="shop_address" cols="30" rows="4"
-                            class="input-field"></textarea> -->
-                        {{user_form.shop_address}}
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 mb-3">
-                            <label>Email</label>
-                            <!-- <input type="email" name="email" id="email" class="input-field"> -->
-                            {{user_form.email}}
-                        </div>
-                        <div class="col-sm-6 mb-3">
-                            <label>Mobile Number</label>
-                            <input type="text" name="phone" id="mob_number" class="input-field" value="{{phone}}">
-                            <!-- {{user_form.phone}} -->
-                            {{user_form.phone.errors}}
-
-                        </div>
-                        <div class="col-sm-6 mb-3">
-                            <label>District</label>
-                            <!-- <input type="text" name="district" id="district" class="input-field" value="{{phone}}"> -->
-                            {{user_form.district}}
-
-
-                        </div>
-                        <div class="col-sm-6 mb-3">
-                            <label>Pincode</label>
-                            <!-- <input type="text" name="pincode" id="pincode" class="input-field" value="{{phone}}"> -->
-                            {{user_form.pincode}}
-
-
-                        </div>
-                        <div class="col-sm-12 col-12 mb-3">
-                            <label>Category</label>
-                            <!-- <input type="text" name="category" id="category" class="input-field"> -->
-                            {{user_form.category}}
-                        </div>
-                    </div>
-                    <div class="mb-3">
-
-                        <input type="checkbox" name="prog" value="1">&nbsp I agree to the <a
+                    <div class="my-4">
+                        <input type="checkbox" id="termsCheck">&nbsp I agree to the <a
                             href="{% url 'web:termsConditions' %}">Terms and Conditions</a>
-
-
                     </div>
-                    <!-- <button type="submit" class="btn btn-primary">CONTINUE </button> -->
 
                     <div class="form-field text-center">
-
-                        <input type="submit" value="Submit" id="submit_prog" class="register" name="register">
-
-
+                        <button type="submit" id="submitBtn" class="btn btn-primary" name="register"
+                            disabled>Submit</button>
                     </div>
                 </form>
             </div>
 
-
-            {% comment %}
-            <h1 class="head">RAZORPAY</h1>
-            <div class="row">
-                <div class="col-6  mx-auto section-start">
-                    <form action="{% url 'web:payment' %}" method='POST' class="form-bg">
-                        {% csrf_token %}
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Name</label>
-                            <input type="name" name="name" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleInputPassword1" class="form-label">Amount</label>
-                            <input type="number" name="amount" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div>
-                            <button type="submit" class="btn btn-primary">Pay Now</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            {% endcomment %}
         </div>
     </div>
 
 
-
-    <!-- container-scroller -->
-    <!-- plugins:js -->
     <script src="{% static 'web/vendors/js/vendor.bundle.base.js' %}"></script>
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
     <script src="{% static 'web/vendors/chart.js/Chart.min.js' %}"></script>
     <script src="{% static 'web/js/jquery.cookie.js' %}" type="text/javascript"></script>
-    <!-- End plugin js for this page -->
-    <!-- inject:js -->
     <script src="{% static 'web/js/off-canvas.js' %}"></script>
     <script src="{% static 'web/js/hoverable-collapse.js' %}"></script>
-    <script src="{% static 'web/js/misc.js' %}"></script>
-    <!-- endinject -->
     <script src="{% static 'web/js/owl.carousel.min.js' %}"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'web/js/main.js' %}"></script>
-    <!-- Custom js for this page -->
-    <script src="{% static 'web/js/dashboard.js' %}"></script>
-    <script src="{% static 'web/js/todolist.js' %}"></script>
 
-    <!-- End custom js for this page -->
-
-
-
+    <script>
+        // if termsCheck is checked, enable submitBtn else disable submitBtn
+        $('#termsCheck').change(function () {
+            if ($(this).is(':checked')) {
+                $('#submitBtn').prop("disabled", false);
+            } else {
+                $('#submitBtn').prop("disabled", true);
+            }
+        });
+    </script>
 
 </body>
 
