--- a/templates/web/login.html
+++ b/templates/web/login.html
@@ -1,31 +1,29 @@
 {% load static %}
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>USKLOGIN.COM</title>
-        <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
-        <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-            crossorigin="anonymous"></script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>USKLOGIN.COM</title>
+    <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
+    <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+</head>
 
-    <body style="background: linear-gradient(90deg, #C7C5F4, #ccc7cd);overflow-y: hidden;">
-        <div class="row">
+<body style="background: linear-gradient(90deg, #C7C5F4, #ccc7cd);">
+    <div class="container">
+        <div class="row py-3">
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                <img src="{% static 'web/images/usklogo.png' %}" class="logo-login">
+                <img src="{% static 'web/images/USKLKOG.png' %}" class="logo-login">
             </div>
-           
         </div>
-        <div class="vh-100 d-flex justify-content-center align-items-center section-margin">
-            <div class="col-md-5 p-4 shadow-sm border rounded-5 border-primary login-form">
+
+        <div class="row mt-4">
+            <div class="col-md-5 p-4 shadow-sm border rounded-5 border-primary login-form mx-auto">
                 <h2 class="text-center mb-4 login-head">Login Form</h2>
-                <form method="POST">
+                <form method="POST" class="text-left">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label class="form-label">Username</label>
@@ -35,7 +33,8 @@
                         <label class="form-label">Password</label>
                         <input type="text" name="password" class="form-control border border-primary" required>
                     </div>
-                    <p class="small"><a class="text-primary" href="{% url 'web:forgot_password' %}">Forgot password?</a></p>
+                    <p class="small"><a class="text-primary" href="{% url 'web:forgot_password' %}">Forgot password?</a>
+                    </p>
                     <div class="d-grid">
                         <button class="btn btn-login" type="submit">Login</button>
                     </div>
@@ -43,7 +42,7 @@
                 {% if messages %}
                 <div class="messages login-message">
                     {% for message in messages %}
-                    <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                    <div {% if message.tags %} class="{{ message.tags }}" {% endif %}>
                         {% if message.level == DEFAdivT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
                         {{ message }}
                     </div>
@@ -62,7 +61,10 @@
             </div>
         </div>
 
+    </div>
 
-    </body>
+
+
+</body>
 
 </html>
