--- a/templates/web/register.html
+++ b/templates/web/register.html
@@ -3,33 +3,22 @@
 
 <head>
     {% load static crispy_forms_tags %}
-    <!-- Required meta tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>USKLOGIN.COM</title>
-    <!-- plugins:css -->
     <link rel="stylesheet" href="{% static 'web/vendors/mdi/css/materialdesignicons.min.css' %}">
     <link rel="stylesheet" href="{% static 'web/vendors/css/vendor.bundle.base.css' %}">
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <!-- endinject -->
-    <!-- Layout styles -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-
-    <!-- End layout styles -->
     <link rel="shortcut icon" href="{% static 'web/images/FAV.png' %}" />
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'web/css/owl.carousel.css' %}">
     <link rel="stylesheet" href="{% static 'web/css/owl.theme.default.css' %}">
-
     <link rel="stylesheet" href="{% static 'web/css/style.css' %}">
 </head>
 
 <body style="background-color:#f2edf3;">
 
     <div class="container">
+
         <div class="row">
             <div class="text-center pt-5">
                 <img src="{% static 'web/images/USKLKOG.png' %}" style="width:24%;" class="usk-login-register" alt="">
@@ -40,7 +29,7 @@
                 <form class="form-right" method="POST" action="">
                     <h2 class="text-uppercase">USK Agent Registration</h2>
 
-                    <div class="row">
+                    <div class="row text-left">
                         {% csrf_token %}
 
                         {% for field in user_form %}
@@ -52,9 +41,10 @@
                         {% endfor %}
                     </div>
 
-                    <div class="my-4">
-                        <input type="checkbox" id="termsCheck">&nbsp I agree to the <a
-                            href="{% url 'web:termsConditions' %}">Terms and Conditions</a>
+                    <div class="mb-4">
+                        <label for="termsCheck" class="form-check-label d-flex align-items-center">
+                            <input type="checkbox" name="terms" id="termsCheck" required class="me-2">
+                            I agree to the <a href="{% url 'web:termsConditions' %}">Terms and Conditions</a>
                     </div>
 
                     <div class="form-field text-center">
