--- a/templates/web/payment.html
+++ b/templates/web/payment.html
@@ -11,17 +11,20 @@
 
 <body>
     <div class="row">
+        
         <script>
             var options = {
                 "key": "{{razorpay_key}}",
-                "amount": "{{order.amount}}",
+                "amount": "{{amount}}",
                 "currency": "INR",
                 "order_id": "{{order.provider_order_id}}",
                 "image": "https://s3.amazonaws.com/rzp-mobile/images/rzp.jpg",
+                "callback_url": "{{callback_url}}",
+                
 
-                "handler": function (response) {
-                    alert(response.razorpay_payment_id);
-                },
+                // "handler": function (response) {
+                //     alert(response.razorpay_payment_id);
+                // },
                 "modal": {
                     "ondismiss": function () {
                         if (confirm("Are you sure, you want to close the form?")) {
