Login issue cleared.#login issues fixing

--- a/templates/web/callback.html
+++ b/templates/web/callback.html
@@ -48,7 +48,7 @@
     <div class="success-content">
       <h4>Congratulations, your account has been successfully created.</h4>
     </div>
-    <a href="{% url 'web:login_view' %}" id="contBtn">Continue</a>
+    <a href="{% url 'auth_login' %}" id="contBtn">Continue</a>
   </div>
 
 
