--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -23,7 +23,7 @@
         <li class="nav-item nav-profile dropdown">
           <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
             <div class="nav-profile-img">
-              
+
               {% if logined_user.profile_image %}
               <img src="{{logined_user.profile_image.url}}" class="profile-picture"/>
               {% else %}
@@ -36,7 +36,7 @@
             </div>
           </a>
           <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
-            <a class="dropdown-item" href="{% url 'web:logout' %}">
+            <a class="dropdown-item" href="{% url 'auth_logout' %}">
               <i class="mdi mdi-logout mr-2 text-primary"></i> Signout </a>
           </div>
         </li>
@@ -50,7 +50,7 @@
           <a class="nav-link count-indicator dropdown-toggle"  href="{% url 'web:notes' %}">
             <i class="mdi mdi-note-plus"></i>
           </a>
-  
+
         </li>
 
 
@@ -63,14 +63,14 @@
           <ul class="dropdown-menu notification-bar" aria-labelledby="navbarDropdown" id="notifications-dropdown"
               data-popper-placement="bottom-end"
               style="position: absolute; inset: 0px auto auto 0px;margin: 51px -103px;; transform: translate3d(-70px, 42px, 0px);">
-              
+
               {% for i in notifications %}
               <li class="dropdown-item">{{i.message}}</li>
               <hr class="dropdown-divider">
               {% endfor %}
               {% comment %} <li class='dropdown-item'>Hello</li>
               <hr class="dropdown-divider"> {% endcomment %}
-              
+
           </ul>
       </li>
 
