--- a/templates/web/certificate-pdf.html
+++ b/templates/web/certificate-pdf.html
@@ -19,18 +19,18 @@
 </head>
 
 <body>
-  
+
     <div style="background: linear-gradient(135deg, #EDEDED 0%, #FFFFFF 100%);box-shadow: -2px 2px 4px rgb(194 194 194 / 20%), 2px -2px 4px rgb(194 194 194 / 20%), -2px -2px 4px rgb(255 255 255 / 90%), 2px 2px 5px rgb(194 194 194 / 90%), inset 1px 1px 2px rgb(255 255 255 / 30%), inset -1px -1px 2px rgb(194 194 194 / 50%);border-radius: 3.88604px;width: 100%;height: auto;">
       <div style=" background-color: white;padding: 1rem; -moz-box-shadow: 20px 20px 36px rgba(0,0,0,0.2);-webkit-box-shadow: 20px 20px 36px rgba(0,0,0,0.2);box-shadow: 20px 20px 36px rgba(0,0,0,0.2);">
         <div style="background-color:#fff;margin: 20px 0px;">
           <div style="display: table;">
-            <div style="text-align: lef;width: 33.33333333%;">  
+            <div style="text-align: lef;width: 33.33333333%;">
               <img src="{{ certificate_images.usk_logo.url }}" style="width: 58%;height: 100px;">
             </div>
             <div style="width: 33.33333333%;margin-left: 33.33333333%;">
               <img src="{{ certificate_images.bruvsha_logo.url }}" style="width: 58%;">
             </div>
-          </div>                    
+          </div>
           <div style="display: table;">
             <div style="width: 100%;">
               <div style=" width: 100%;height: 70px;margin: 40px auto;background-color: #2d4f8f;">
@@ -40,10 +40,10 @@
           </div>
           <div style="display: table;">
             <div style="width: 25%;">
-              <span style="font-size: 16px;font-family: 'Poppins', sans-serif;">Joined Date : </span><span>&nbsp;{{logined_user.created}}</span>
+              <span style="font-size: 16px;font-family: 'Poppins', sans-serif;">Joined Date : </span><span>&nbsp;{{request.user.created}}</span>
             </div>
             <div style="width: 25%;margin-left: 50%;">
-              <span style="font-size: 16px;font-family: 'Poppins', sans-serif;">Usk Id : </span><span>&nbsp;{{logined_user.id}}</span>
+              <span style="font-size: 16px;font-family: 'Poppins', sans-serif;">Usk Id : </span><span>&nbsp;{{request.user.id}}</span>
             </div>
           </div>
           <div style="display: table;">
@@ -53,7 +53,7 @@
               </div>
               <div style=" margin-top:28px; ">
                 <span style="font-size: 38px;
-                font-family: 'Montserrat', sans-serif;font-weight:600;">{{logined_user.name}}</span>
+                font-family: 'Montserrat', sans-serif;font-weight:600;">{{request.user.name}}</span>
                 <hr style="width: 50%;margin-top: 0px;margin-left: auto;margin-right: auto;margin-bottom: 20px;border: 1px solid #000;">
               </div>
               <div style="margin-top: 1.5re;">
@@ -68,19 +68,19 @@
                   <p style="font-size: 17px;font-family: 'Poppins', sans-serif;margin: 0px;text-align: righ;">Shop Name :</p>
                 </div>
                 <div style="text-align: lef;width: 50%;">
-                  <span>{{logined_user.shop_name}}</span>
+                  <span>{{request.user.shop_name}}</span>
                 </div>
                 <div style="width: 50%;">
                   <p style="font-size: 17px;font-family: 'Poppins', sans-serif;margin: 0px;text-align: righ;">District :</p>
                 </div>
                 <div style="text-align: lef; width: 50%;">
-                  <span>{{logined_user.district}}</span>
+                  <span>{{request.user.district}}</span>
                 </div>
                 <div style="width: 50%;">
                   <p style="font-size: 17px;font-family: 'Poppins', sans-serif;margin: 0px;text-align: righ;">Pincode :</p>
                 </div>
                 <div style="text-align: lef;width: 50%;">
-                  <span>{{logined_user.pincode}}</span>
+                  <span>{{request.user.pincode}}</span>
                 </div>
               </div>
             </div>
@@ -95,7 +95,7 @@
         </div>
       </div>
     </div>
- 
+
 
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
