--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -24,15 +24,15 @@
           <a class="nav-link dropdown-toggle" id="profileDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
             <div class="nav-profile-img">
 
-              {% if logined_user.profile_image %}
-              <img src="{{logined_user.profile_image.url}}" class="profile-picture"/>
+              {% if request.user.profile_image %}
+              <img src="{{request.user.profile_image.url}}" class="profile-picture"/>
               {% else %}
               <img src="{% static 'web/images/deafult-01.jpg' %}"  class="profile-picture"/>
               {% endif %}
               <span class="availability-status online"></span>
             </div>
             <div class="nav-profile-text">
-              <p class="mb-1 text-black">{{logined_user.name}}</p>
+              <p class="mb-1 text-black">{{request.user.name}}</p>
             </div>
           </a>
           <div class="dropdown-menu navbar-dropdown" aria-labelledby="profileDropdown">
