password Change Added #login issues fixing

--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,31 +1,20 @@
-{% extends 'app/base.html' %}
+{% extends 'registration/base.html' %}
 {% load static i18n crispy_forms_tags %}
+{% load static widget_tweaks %}
+
+{% block title %}{% trans "Change password" %}{% endblock %}
 
 {% block content %}
-<div class="content-wrapper">
-    <div class="page-header">
-        <h3 class="page-title">
-            <a href="{% url 'app:dashboard' %}" class="page-title-icon bg-gradient-primary text-white me-2">
-                <i class="mdi mdi-home"></i>
-            </a>
-            Change Password
-        </h3>
-    </div>
-    <div class="row">
-        <div class="col-lg-6 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="app_card row">
+
+                    <div class="col-md-5 p-4 shadow-sm border rounded-5 border-primary login-form mx-auto">
+                      <div class="row text-center">
                         <form method="post" action="">
                             {% csrf_token %}
                             {{ form|crispy}}
-                            <input type="submit" class="btn btn-primary" value="{% trans 'Change password' %}" />
+                            <input type="submit" class="btn btn-login" value="{% trans 'Change password' %}" />
                         </form>
+                      </div>
                     </div>
 
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 {% endblock %}
