--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -77,7 +77,7 @@
 
 
         <li class="nav-item nav-logout d-none d-lg-block">
-          <a class="nav-link" href="{% url 'web:logout' %}">
+          <a class="nav-link" href="{% url 'auth_logout' %}">
             <i class="mdi mdi-power"></i>
           </a>
         </li>
