--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -43,6 +43,10 @@
                     class="text-primary fw-bold">Sign
                     Up</a></p>
         </div>
+        <div class="mt-3">
+            <p class="mb-0  text-center">Change Your Password <a href="{% url 'auth_password_change' %}"
+                    class="text-primary fw-bold">Change Password</a></p>
+        </div>
 
         <div class="learnmore-button">
             <span>LEARN MORE</span>
