--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,26 +1,11 @@
-{% extends 'app/base.html' %}
+{% extends 'registration/base.html' %}
 {% load static i18n crispy_forms_tags %}
 
 {% block content %}
-<div class="content-wrapper">
-    <div class="page-header">
-        <h3 class="page-title">
-            <a href="{% url 'app:dashboard' %}" class="page-title-icon bg-gradient-primary text-white me-2">
-                <i class="mdi mdi-home"></i>
-            </a>
-            My Account
-        </h3>
-    </div>
-    <div class="row">
-        <div class="col-lg-12 grid-margin stretch-card">
-            <div class="card">
-                <div class="card-body">
-                    <div class="app_card row">
-                        <h4 class="text-center">{% trans "Password successfully changed!" %}</h4>
-                    </div>
+
+                <div class="col-md-5 p-4 shadow-sm border rounded-5 border-primary login-form mx-auto">
+                  <div class="row text-center">
+                    <h4 class="text-center">{% trans "Password successfully changed!" %}</h4>
+                  </div>
                 </div>
-            </div>
-        </div>
-    </div>
-</div>
 {% endblock %}
