--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -79,6 +79,13 @@
                                     </a>
                                 </div>
                             </div>
+                            <div class="col-lg-12 col-md-12 col-sm-6 col-6">
+                                <div class="d-flex justify-content-between align-items-center experience">
+                                    <a href="{% url 'auth_password_change' %}">
+                                        <button class="editbtn" id="chatBtn"><i class="fa-solid fa-lock"></i> Change Password</button>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
