Send_mail usinf sendinblue completed

--- a/templates/web/certificate-pdf.html
+++ b/templates/web/certificate-pdf.html
@@ -25,7 +25,10 @@
         <div style="background-color:#fff;margin: 20px 0px;">
           <div style="display: table;">
             <div style="text-align: lef;width: 33.33333333%;">
-              <img src="{{ certificate_images.usk_logo.url }}" style="width: 58%;height: 100px;">
+              <!-- <img src="{{ certificate_images.usk_logo.url }}" style="width: 58%;height: 100px;"> -->
+              <svg height="30" width="200">
+                <text x="0" y="15" fill="red">I love SVG!</text>
+              </svg>
             </div>
             <div style="width: 33.33333333%;margin-left: 33.33333333%;">
               <img src="{{ certificate_images.bruvsha_logo.url }}" style="width: 58%;">
