--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -7,5 +7,8 @@
                   <div class="row text-center">
                     <h4 class="text-center">{% trans "Password successfully changed!" %}</h4>
                   </div>
+                  <div class="text-center">
+                      <a href="{% url 'auth_login' %}" class="rt_btn_color_border">Login Again</a>
+                  </div>
                 </div>
 {% endblock %}
