certificate to svg and invoice search started

--- a/templates/invoice/customer_list.html
+++ b/templates/invoice/customer_list.html
@@ -126,7 +126,7 @@ tbody, td, tfoot, th, thead, tr {
                 <div class="container-2"><span class="icon"><i class="fa fa-search"></i></span>
   
                     <!-- Ensure that the input control you want to use is decorated with the data-prefixbox attribute -->
-                    <input type="search" id="search" placeholder="Search..." data-prefixbox="true" />
+                    <input type="search" id="search_invoice" placeholder="Search..." data-prefixbox="true" />
                   
                   </div>
             </div>
