Invoice searching on progress

--- a/templates/invoice/customer_list.html
+++ b/templates/invoice/customer_list.html
@@ -124,11 +124,14 @@ tbody, td, tfoot, th, thead, tr {
             <div class="col-lg-5 col-md-12 col-sm-12 col-12">
                 <h5 class="customer-list-head pb-4">Search Invoice: </h5>
                 <div class="container-2"><span class="icon"><i class="fa fa-search"></i></span>
-  
-                    <!-- Ensure that the input control you want to use is decorated with the data-prefixbox attribute -->
-                    <input type="search" id="search_invoice" placeholder="Search..." data-prefixbox="true" />
-                  
+                    <input type="search" id="search" placeholder="Search..." data-prefixbox="true" />
                   </div>
+                  <!-- <div class="input-group">
+                    <div class="input-group-prepend bg-transparent">
+                      <i class="input-group-text border-0 mdi mdi-magnify"></i>
+                    </div>
+                    <input type="text" class="form-control bg-transparent border-0" placeholder="Search" id="search-tile" name="search-title">
+                  </div> -->
             </div>
         </div>
 
