--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -100,6 +100,8 @@
 
   <script src="{% static 'web/js/search.js' %}"></script>
 
+  <script src="{% static 'web/js/invoice_search.js' %}"></script>
+
 
 
   <!-- End custom js for this page -->
