--- a/templates/invoice/general_3.html
+++ b/templates/invoice/general_3.html
@@ -30,7 +30,8 @@
                         <div class="tm_shape_bg tm_accent_bg tm_mobile_hide"></div>
                     </div>
                     <div class="tm_invoice_info tm_mb25">
-                        <div class="tm_card_note tm_mobile_hide"><b class="tm_primary_color">Payment Method: </b>Paypal, Western Union</div>
+                        <div class="tm_card_note tm_mobile_hide"><b class="tm_primary_color">Payment Method: </b>Paypal,
+                            Western Union</div>
                         <div class="tm_invoice_info_list tm_white_color">
                             <p class="tm_invoice_number tm_m0">Invoice No: <b>{{ invoice.invoice_no }}</b></p>
                             <p class="tm_invoice_date tm_m0">Date: <b>{{invoice.created}}</b></p>
@@ -84,7 +85,8 @@
                                         {% comment %}
                                         <tr>
                                             <td class="tm_width_3">2. Web Development</td>
-                                            <td class="tm_width_4">Convert pixel-perfect frontend and make it dynamic</td>
+                                            <td class="tm_width_4">Convert pixel-perfect frontend and make it dynamic
+                                            </td>
                                             <td class="tm_width_2">$600</td>
                                             <td class="tm_width_1">1</td>
                                             <td class="tm_width_2 tm_text_right">$600</td>
@@ -121,12 +123,16 @@
                                             <td class="tm_width_3 tm_primary_color tm_bold tm_text_right">$1650</td>
                                         </tr>
                                         <tr class="tm_gray_bg">
-                                            <td class="tm_width_3 tm_primary_color">Tax <span class="tm_ternary_color">(5%)</span></td>
+                                            <td class="tm_width_3 tm_primary_color">Tax <span
+                                                    class="tm_ternary_color">(5%)</span></td>
                                             <td class="tm_width_3 tm_primary_color tm_text_right">+$82</td>
                                         </tr>
                                         <tr class="tm_accent_bg">
-                                            <td class="tm_width_3 tm_border_top_0 tm_bold tm_f16 tm_white_color">Grand Total </td>
-                                            <td class="tm_width_3 tm_border_top_0 tm_bold tm_f16 tm_white_color tm_text_right">${{invoice.get_total}}</td>
+                                            <td class="tm_width_3 tm_border_top_0 tm_bold tm_f16 tm_white_color">Grand
+                                                Total </td>
+                                            <td
+                                                class="tm_width_3 tm_border_top_0 tm_bold tm_f16 tm_white_color tm_text_right">
+                                                ${{invoice.get_total}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -146,7 +152,9 @@
                     <div class="tm_note tm_text_center tm_font_style_normal">
                         <hr class="tm_mb15">
                         <p class="tm_mb2"><b class="tm_primary_color">Terms & Conditions:</b></p>
-                        <p class="tm_m0">All claims relating to quantity or shipping errors shall be waived by Buyer unless made in writing to <br>Seller within thirty (30) days after delivery of goods to the address stated.</p>
+                        <p class="tm_m0">All claims relating to quantity or shipping errors shall be waived by Buyer
+                            unless made in writing to <br>Seller within thirty (30) days after delivery of goods to the
+                            address stated.</p>
                     </div><!-- .tm_note -->
                 </div>
             </div>
@@ -154,9 +162,13 @@
                 <a href="javascript:window.print()" class="tm_invoice_btn tm_color1">
                     <span class="tm_btn_icon">
                         <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
-                            <path d="M384 368h24a40.12 40.12 0 0040-40V168a40.12 40.12 0 00-40-40H104a40.12 40.12 0 00-40 40v160a40.12 40.12 0 0040 40h24" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="32" />
-                            <rect x="128" y="240" width="256" height="208" rx="24.32" ry="24.32" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="32" />
-                            <path d="M384 128v-24a40.12 40.12 0 00-40-40H168a40.12 40.12 0 00-40 40v24" fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="32" />
+                            <path
+                                d="M384 368h24a40.12 40.12 0 0040-40V168a40.12 40.12 0 00-40-40H104a40.12 40.12 0 00-40 40v160a40.12 40.12 0 0040 40h24"
+                                fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="32" />
+                            <rect x="128" y="240" width="256" height="208" rx="24.32" ry="24.32" fill="none"
+                                stroke="currentColor" stroke-linejoin="round" stroke-width="32" />
+                            <path d="M384 128v-24a40.12 40.12 0 00-40-40H168a40.12 40.12 0 00-40 40v24" fill="none"
+                                stroke="currentColor" stroke-linejoin="round" stroke-width="32" />
                             <circle cx="392" cy="184" r="24" fill='currentColor' />
                         </svg>
                     </span>
@@ -165,11 +177,17 @@
                 <button id="tm_download_btn" class="tm_invoice_btn tm_color2">
                     <span class="tm_btn_icon">
                         <svg xmlns="http://www.w3.org/2000/svg" class="ionicon" viewBox="0 0 512 512">
-                            <path d="M320 336h76c55 0 100-21.21 100-75.6s-53-73.47-96-75.6C391.11 99.74 329 48 256 48c-69 0-113.44 45.79-128 91.2-60 5.7-112 35.88-112 98.4S70 336 136 336h56M192 400.1l64 63.9 64-63.9M256 224v224.03" fill="none"
-                              stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" />
+                            <path
+                                d="M320 336h76c55 0 100-21.21 100-75.6s-53-73.47-96-75.6C391.11 99.74 329 48 256 48c-69 0-113.44 45.79-128 91.2-60 5.7-112 35.88-112 98.4S70 336 136 336h56M192 400.1l64 63.9 64-63.9M256 224v224.03"
+                                fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                stroke-width="32" />
                         </svg>
                     </span>
                     <span class="tm_btn_text">Download</span>
                 </button>
             </div>
         </div>
+    </div>
+</body>
+
+</html>
