--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -68,7 +68,6 @@
             <div class="row">
                 <div class="col-md-3 border-right">
                     <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-
                         {% if request.user.profile_image %}
                         <img class="rounded-circle mt-5" width="150px" src="{{request.user.profile_image.url}}">
                         {% else %}
@@ -127,7 +126,8 @@
                             <div class="col-lg-12 col-md-12 col-sm-3 col-3">
                                 <div class="d-flex justify-content-between align-items-center experience">
                                     <a href="{% url 'web:upgrade_plan' %}">
-                                        <button class="editbtn" id="chatBtn"><i class="fa-solid fa-sack-dollar"></i> Plan</button>
+                                        <button class="editbtn" id="chatBtn"><i class="fa-solid fa-sack-dollar"></i>
+                                            Plan</button>
                                     </a>
                                 </div>
                             </div>
@@ -156,28 +156,34 @@
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                 <div class="branding_image_uploading">
-                    <img src="{{branding_image.images}}" alt="">
+                    <img src="{{uploaded_branding_image.image.url}}" alt="">
                 </div>
             </div>
 
-            <div class="col-lg-12">
-                <div class="row">
-                    <form method="post" enctype="multipart/form-data">
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="col-lg-12">
+                    <div class="row">
+
+                        
+                       
                         <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                            <label class="label-file"><input class="get-input" type="file" name="" id="apply">Upload
+                            <label class="label-file"><input class="get-input" type="file" value="{{branding_image.as_p}}" name="" id="apply">Upload
                                 Image</label>
                         </div>
+                        
                         <div class="col-lg-2">
                             <input type="submit" value="Save Uploaded Image" class="save_button">
                         </div>
-                    </form>
-                    <div class="col-lg-3 col-md-3 col-sm-6 col-6">
-                        <div class="buynow_button">
-                            Buy Now
+
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-6">
+                            <div class="buynow_button">
+                                Buy Now
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </form>
 
         </div>
     </div>
