Search icon apply

--- a/templates/web/invoice-searching.html
+++ b/templates/web/invoice-searching.html
@@ -14,7 +14,10 @@
                 <input type="text"
                     placeholder=" Search Courses"
                     name="search">
-                <button>
+                <button style="
+                background: #f2edf3;
+                border: none;
+            "> 
                     <i class="fa fa-search"
                         style="font-size: 18px;">
                     </i>
