implimented call and whatsapp btn view only to subscribed user.

--- a/templates/web/callback.html
+++ b/templates/web/callback.html
@@ -46,7 +46,7 @@
       </svg>
     </div>
     <div class="success-content">
-      <h4>Congratulations, your account has been successfully created.</h4>
+      <h4>Congratulations, your account has been successfully Upgraded.</h4>
     </div>
     <a href="{% url 'auth_login' %}" id="contBtn">Continue</a>
   </div>
