--- a/templates/web/support.html
+++ b/templates/web/support.html
@@ -8,7 +8,7 @@
 
         <section>
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-12 ">
                     <h5 class="text-center support-title">SUPPORT</h5>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
@@ -19,14 +19,14 @@
 
 
         <section>
-            <div class="row">
+            <div class="row d-flex justify-content-center">
             <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                 <div class="cards">
                     <a href="{% url 'web:supportRequest' %}">
                         <div class="cards-content">
                             <span>REQUEST</span>
-                        </div> 
-                    </a>      
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-6">
@@ -34,17 +34,20 @@
                     <a href="{% url 'web:supportTicket' %}">
                         <div class="cards-content">
                             <span>TICKET</span>
-                        </div>  
-                    </a>    
+                        </div>
+                    </a>
                 </div>
             </div>
+
+            {% for subs in subscription%}
+            {% if subs.is_active %}
             <div class="col-lg-3 col-md-3 col-sm-6 col-6">
                 <div class="cards">
                     <a href="{% url 'web:call_support' %}">
                         <div class="cards-content">
                             <span>CALL</span>
-                        </div> 
-                    </a>       
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-6">
@@ -53,9 +56,12 @@
                         <div class="cards-content">
                             <span>WHATSAPP</span>
                         </div>
-                    </a>         
+                    </a>
                 </div>
             </div>
+            {% endif %}
+            {% endfor %}
+
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-6 col-6 mx-auto">
@@ -63,11 +69,12 @@
                         <a href="{% url 'web:F_A_Q' %}">
                             <div class="cards-content">
                                 <span>FAQ</span>
-                            </div> 
-                        </a>    
+                            </div>
+                        </a>
                     </div>
-                </div>   
+                </div>
             </div>
+
         </section>
     </div>
 </div>
