--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -79,7 +79,7 @@
     </section>
 
 
-
+{% comment %}
     <div class="d-none">
       <div class="service-heading">
         <h5>Branding Image</h5>
@@ -90,6 +90,7 @@
         {% endfor %}
       </div>
     </div>
+    {% endcomment %}
 
     <!-- new services -->
     <section class="py-5">
