branding image null condition applied

--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -84,9 +84,11 @@
         <h5>Branding Image</h5>
       </div>
       <div class="container">
-        
+        {% if branding_image.image %}
         <img src="{{branding_image.image.crop.1000x100}}" id="footerImage" alt="Image">
-       
+       {% else %}
+       <h4>....</h4>
+       {% endif %}
        
       </div>
     </div>
