BrandingIAmge buynow added

--- a/templates/web/profile.html
+++ b/templates/web/profile.html
@@ -258,9 +258,11 @@
                             <input type="submit" value="Save Uploaded Image" class="save_button">
                         </div>
                         <div class="col-lg-2 col-md-3 col-sm-4 col-4">
-                            <div class="buynow_button">
-                                Buy Now
-                            </div>
+                                <a href="{% url 'web:buy_now_branding_image' %}">
+                                    <div class="buynow_button">
+                                        Buy Now
+                                    </div>
+                                </a>
                         </div>
                     </div>
                 </div>
